"Fix contact section alignment"

--- a/style.css
+++ b/style.css
@@ -220,6 +220,15 @@ p#contact-intro {
     font-size: 20px;
 }
 
+section#contact 
+   {
+       max-width: 1200px;
+       padding-left: 20px;
+       padding-right: 20px;
+       box-sizing: border-box;
+       margin: 50px auto;
+   }
+   
 p#email {
     font-size: 16px;
 }
@@ -244,7 +253,7 @@ form {
     padding-left: 20px;
     padding-right: 20px;
     box-sizing: border-box;
-    margin: auto;
+    margin: 0px;
 }
 
 label {
